# aula09_bootcamp

./: dados.csv  etl.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml
