[project]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "lucasftorres",email = "lucaas.torresf192@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
